--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "collection-management",
   "version": "0.1.0",
   "private": true,
+  "types": "index.d.ts",
   "scripts": {
     "dev": "next dev",
     "postinstall": "prisma generate",
@@ -14,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.18.0",
+    "@tanstack/react-query": "^5.52.1",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
@@ -24,6 +26,7 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.52.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
